--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -59,7 +59,7 @@ spec:
         name: nose
       params:
       - name: database_uri
-        value: "python:3.9-slim"
+        value: "sqlite:///test.db"
       - name: args
         value: "-v --with-spec --spec-color"
       runAfter:
